# Kirkstone

kirkstone/: .gitignore
kirkstone/.knowledge/: .knowledge.json  components_opensource_OMI_CONTRIBUTING.md.json  components_opensource_OMI_client_i_omi_proxy.hpp.json  components_opensource_OMI_client_omi_proxy.cpp.json  components_opensource_OMI_client_omi_proxy.hpp.json  components_opensource_OMI_dbus_com.lgi.onemw.omi1.xml.json  components_opensource_OMI_src_omi_log.hpp.json  components_opensource_OMI_src_omi_main.cpp.json  components_opensource_OMI_src_omi_mount.cpp.json  components_opensource_OMI_src_omi_mount.hpp.json  components_opensource_OMI_src_omi_parser.cpp.json  components_opensource_OMI_src_omi_parser.hpp.json  components_opensource_OMI_src_omi_service.cpp.json  components_opensource_OMI_src_omi_service.hpp.json  components_opensource_OMI_src_omi_unmount.cpp.json  components_opensource_OMI_src_omi_unmount.hpp.json  components_opensource_OMI_src_omi_utils.cpp.json  components_opensource_OMI_src_omi_utils.hpp.json  components_opensource_OMI_test_omi_parser_test.cpp.json  components_opensource_gdbus-client_CONTRIBUTING.md.json  components_opensource_gdbus-client_src_GDBusClient.cpp.json  components_opensource_gdbus-client_src_GDBusClient.hpp.json  components_opensource_gdbus-client_src_GDBusConverters.cpp.json  components_opensource_hal-wifi-cfg80211_CONTRIBUTING.md.json  components_opensource_hal-wifi-cfg80211_README.md.json  components_opensource_hal-wifi-cfg80211_source_wifi_client_wifi_hal.c.json  components_opensource_hal-wifi-cfg80211_source_wifi_client_wifi_hal.h.json  components_opensource_hal-wifi-cfg80211_source_wifi_wifi_hal.c.json  components_opensource_hal-wifi-cfg80211_source_wifi_wifi_hal_hapd.c.json  components_opensource_hal-wifi-cfg80211_source_wifi_wifi_hal_hapd.h.json  components_opensource_zilker-sdk_3rdParty_ccronexpr_ccronexpr.cmake.json  components_opensource_zilker-sdk_3rdParty_linenoise_linenoise.cmake.json  components_opensource_zilker-sdk_3rdParty_littlesheens_patch.sh.json  components_opensource_zilker-sdk_3rdParty_openssl_patch.sh.json  components_opensource_zilker-sdk_BUILDING.md.json  components_opensource_zilker-sdk_CONTRIBUTING.md.json  components_opensource_zilker-sdk_GUIDE.md.json  components_opensource_zilker-sdk_README.md.json  components_opensource_zilker-sdk_branding_README.md.json  components_opensource_zilker-sdk_branding_createBranding.sh.json  (+13135 more)
kirkstone/.knowledge/.documents/: meta-rdk-sampleapp_INTEGRATION_README.md.json
kirkstone/.repo/: TRACE_FILE
kirkstone/.repo/projects/rdkb/docs.git/: .repo_config.json  FETCH_HEAD  HEAD  config  index  packed-refs
kirkstone/meta-rdk-sampleapp/: .gitignore  COPYING.MIT  INTEGRATION_README.md  INTEGRATION_STEPS.md  README.md  README_chat_transcript.md
kirkstone/meta-rdk-sampleapp/classes/: sampleapp-integrate.bbclass
kirkstone/meta-rdk-sampleapp/conf/: layer.conf
kirkstone/meta-rdk-sampleapp/recipes-core/images/: rdk-broadband-image.bbappend
kirkstone/meta-rdk-sampleapp/recipes-packagegroups/packagegroup-meta-rdk-sampleapp/: packagegroup-meta-rdk-sampleapp.bb
kirkstone/meta-rdk-sampleapp/recipes-sampleapp/: README.md
kirkstone/meta-rdk-sampleapp/recipes-sampleapp/sampleapp/: sampleapp-native_1.0.bb  sampleapp_1.0.bb
kirkstone/meta-rdk-sampleapp/recipes-support/rdk-logger/: rdk-logger.bbappend
kirkstone/meta-rdk-sampleapp/recipes-support/utopia/: utopia.bbappend
kirkstone/rdkb/components/opensource/ccsp/RdkCellularManager/source/test/: Makefile.am  cellmgr_bus_utils_test.cpp  cellmgr_cellular_apis_test.cpp  cellmgr_mock.cpp  cellmgr_mock.h  cellmgr_rbus_events_test.cpp  cellmgr_sm_test.cpp  gtest_main.cpp
kirkstone/rdkb/components/opensource/ccsp/RdkCellularManager/source/test/mocks/: cellular_api_mock.cpp  cellular_api_mock.h  mock_SMPThread.cpp  mock_SMPThread.h  psmHandler_mock.cpp  psmHandler_mock.h  rbusevent_mock.cpp  rbusevent_mock.h
(+5071 files in other folders)
